--- a/projeto/estilos/telecall.css
+++ b/projeto/estilos/telecall.css
@@ -1,36 +1,81 @@
-*{
-    font-family: arial;
+@charset "UTF-8"
+
+@import url(<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">);
+
+* {
+    /* define o tipo de fonte. */
+    font-family: "ubuntu", sans-serif;
 }
- 
+
 body{
-    background-image: linear-gradient(to right,#004a7a, #4c2882,#c70224 );
+    background-image: linear-gradient(to right,#000000, #101c5f,#ee2608);
     align-items: center;
     justify-content: center;
     min-height: 100vh;
     display: flex;
-    line-height: 1.4;
-
 }
- 
+
+section {
+    /* cor do elemento. */
+    background: #35aaaa;
+
+    /* espaco ao redor do conteudo
+    30px sup e inf
+    5px esq e dir. */
+    padding: 30px 5px;
+
+    /* arredondar cantos. */
+    border-radius: 10px;
+
+    /* add sobra. */
+    box-shadow: 5px 5px 15px;
+
+    /* tam max elemento. */
+    max-width: 70vh;
+}
+
+section legend {
+    /* alinha txt no centro. */
+    text-align: center;
+}
+
+p{
+    text-align: center
+}
+
+#logo {
+    text-align: center;
+    background-color: #25487a;
+    color: rgb(227, 234, 240);
+    border-radius: 10px;
+}
+
+#enter{
+    text-align: center;
+}
+
 h3{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
 }
- 
+
 .container{
-    background-color: whitesmoke;
-   /* border: 2px solid #000;
-    margin: auto;
-    width: 500px;
-    padding: 10px;*/
+    background-color: rgb(245, 246, 248);
+    border: 2px solid #000;
+    margin: none;
+    width: 300px;
+    padding: 10px;
+    border-radius: 10px;
+    padding: 5px 5px;
+    box-shadow: 5px 5px 15px;
 }
- 
+
 form{
     padding: 20px;
     margin: 10px 25px 50px 25px;
     display: block;
 }
- 
+
 .button{
     border-radius: 3px;
     border: none;
@@ -42,38 +87,41 @@ form{
     padding: 8px 10px;
     margin: 4px 2px;
 }
- 
+
 .button1{
     background-color: white;
     color: black;
     border: 2px solid #041e42;
 }
- 
+
 .button2{
     background-color: white;
     color:black;
     border: 2px solid #ff2400;
 }
-/*
-.button3{
+
+    /*
+    .button3{
     background-color: white;
     color: black;
     border: 2px solid #041e42;
-}
-*/
+    }
+    */
+
+
 .button1:hover{
     background-color: #041e42;
     color: white;
 }
- 
+
 .button2:hover{
     background-color: #ff2400;
     color: white;
 }
-/*
-.button3:hover{
+
+    /*
+    .button3:hover{
     background-color: #041e42;
     color: white;
- 
-}
-*/
+    }
+    */
