--- a/telecall-main 19.06.22/projeto/estilos/pag2fa.css
+++ b/telecall-main 19.06.22/projeto/estilos/pag2fa.css
@@ -12,6 +12,7 @@ body{
     font-family: "ubuntu", sans-serif;
     flex-direction: column;
     background-image: linear-gradient(to right, whitesmoke,#e4e6ee,#6db8eb);
+    background-repeat: no-repeat;
     text-align:left;
 }
 
